Need to fix forms on signup page, and change the back-button on single pages... which is wrapped in a form

--- a/css/single-pages.css
+++ b/css/single-pages.css
@@ -1,10 +1,16 @@
+
 main {
+    padding: 20px 0 20px 0;
+    margin: auto;
+    background-color: #2b2b2b;
+    width: 600px;
+    height: 1000px;
+    border-radius: 15px;
     display: flex;
     flex-direction: column;
-    padding: 20px 0 20px 0;
 }
 
-section.row-c {
+section.row-cod {
     background: url("../assets/images/cod.jpg") center top no-repeat;
     background-size: cover;
     min-height: 30vh;
@@ -20,7 +26,8 @@ section.flex-c div.card div.card-buttons {
 }
 
 /* probably bad practice, I honestly don´t know. Using for prototyping purpose */
-form input.btn-previous {
+
+input.btn-previous {
     font-family: FontAwesome, 'Roboto', Helvetica, Arial, sans-serif;
     text-decoration: none;
     box-shadow: -7px -7px 20px 0 #2b2b2b,
@@ -33,11 +40,114 @@ form input.btn-previous {
     border: none;
     width: 70px;
     padding: 11px;
-}
+}/**/
 
 /* need js for this */
 div.btn-box-js {
     display: none;
+}
+
+
+main.signup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+main.signup section.row-c form ul {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+
+}
+
+
+
+
+section.row-c,
+section.flex-c {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 640px;
+    margin: 0 auto;
+    height: 500px;
+    border-radius: 5px;
+    background-color: var(--fgDark);
+    color: var(--textColor-dark);
+    box-shadow: -7px -7px 20px 0 #2b2b2b,
+    -4px -4px 5px 0 #2b2b3b,
+    7px 7px 25px 0 #0001,
+    2px 2px 10px 0 #0006;
+}
+
+section.flex-c form ul li,
+section.row-c form ul li {
+    list-style-type: none;
+    text-decoration: none;
+}
+
+main.signup section.row-c form.signup ul {
+    width: 70%;
+}
+
+label {
+    padding: 10px 0 10px 0;
+    display: flex;
+    text-align: center;
+}
+
+input,
+textarea {
+    width: 100%;
+    color: var(--textColor-dark);
+
+}
+
+input:focus,
+textarea:focus {
+    border: 1px solid transparent;
+    border-radius: 5px;
+    background-color: var(--fgDark);
+    box-shadow: -7px -7px 20px 0 #2b2b2b,
+    -4px -4px 5px 0 #2b2b3b,
+    7px 7px 25px 0 #0001,
+    2px 2px 10px 0 #0006;
+    color: var(--textColor-dark);
+}
+
+textarea {
+    vertical-align: top;
+    height: 5em;
+    resize: none;
+}
+
+input,
+textarea {
+    border: 1px solid transparent;
+    border-radius: 5px;
+    background-color: var(--fgDark);
+    padding: 10px 0;
+    transition: 0.5s;
+    outline: none;
+}
+
+button[type="submit"] {
+    border: none;
+    margin-top: 25px;
+    padding: 16px 32px;
+    text-decoration: none;
+    cursor: pointer;
+    background-color: var(--btn-primary);
 }
 
 /* tablet */
@@ -86,29 +196,29 @@ div.btn-box-js {
         flex-direction: row;
     }
 
+    main.signup {
+        flex-direction: column;
+        align-items: center;
+    }
+
     section.row-cod {
         background: url("../assets/images/cod.jpg") center top no-repeat;
         background-size: contain;
-        min-height: 35vh;
-        border: 1px solid red;
     }
 
     section.row-valorant {
         background: url("../assets/images/valorant.jpeg") center top no-repeat;
         background-size: cover;
-        min-height: 35vh;
     }
 
     section.row-skyrim {
         background: url("../assets/images/skyrim.jpg") center top no-repeat;
         background-size: cover;
-        min-height: 35vh;
     }
 
     section.row-fortnite {
         background: url("../assets/images/fortnite-light.jpg") center top no-repeat;
         background-size: cover;
-        min-height: 35vh;
     }
 
     section.flex-c div.card {
